RESOLVED FIXED123915
[WebGL] We should not allow generateMipMap on compressed textures
https://bugs.webkit.org/show_bug.cgi?id=123915
Summary [WebGL] We should not allow generateMipMap on compressed textures
Brent Fulgham
Reported 2013-11-06 12:42:37 PST
The WebGL conformance test suite generates an error for the Mac WebGL implementation because our implementation of glGenerateMipmaps accepts compressed textures as inputs. The specification calls for this to generate a GL INVALID_OPERATION error with the message ""trying to generate mipmaps from compressed texture". This bug enforces the WebGL 1.0 constraint on our software.
Attachments
Patch (5.49 KB, patch)
2013-11-06 13:17 PST, Brent Fulgham
dino: review+
Brent Fulgham
Comment 1 2013-11-06 13:11:41 PST
Brent Fulgham
Comment 2 2013-11-06 13:17:41 PST
Dean Jackson
Comment 3 2013-11-06 13:25:50 PST
Comment on attachment 216212 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=216212&action=review > Source/WebCore/html/canvas/WebGLRenderingContext.cpp:2227 > +#if OS(DARWIN) Considering this is WebGL conformance, do you think this should be on all platforms?
Brent Fulgham
Comment 4 2013-11-06 13:28:22 PST
(In reply to comment #3) > (From update of attachment 216212 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=216212&action=review > > > Source/WebCore/html/canvas/WebGLRenderingContext.cpp:2227 > > +#if OS(DARWIN) > > Considering this is WebGL conformance, do you think this should be on all platforms? Good question! I changed from "glGenerateMipmapEXT" to "glGenerateMipmap", which might be all that is necessary on most platforms. In those cases, GL itself should generate the error. However, our own Apple implementation sneakily maps glGenerateMipmap -> glGenerateMipMapEXT so we can never get the desired error behavior. It probably wouldn't hurt to remove the #if/def, since it just causes WebGL to generate the error, rather than the underlying GL implementation. I'll go ahead and remove it while landing.
Brent Fulgham
Comment 5 2013-11-06 15:07:10 PST
Note You need to log in before you can comment on or make changes to this bug.